Add React router

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,6 @@ body {
 
 .game-container {
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
 }
 
@@ -29,6 +28,11 @@ div.question-card {
 
 button.next {
   margin: 25px;
+  a,
+  a:hover {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 button.options {
@@ -58,7 +62,30 @@ button.options.highlight {
   border-width: 5px;
 }
 
-.immediate-result {
+.question-detail-header {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 5px 0;
+}
+
+.score-badge {
+  display: flex;
+  align-items: center;
   justify-content: center;
+  min-width: 20vw;
+}
+
+div.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  h1 {
+    text-align: center;
+  }
 }
